--- a/src/app/events/nav/navbar.component.html
+++ b/src/app/events/nav/navbar.component.html
@@ -25,7 +25,9 @@
         <div class="navbar-header navbar-right">
           <ul class="nav navbar-nav">
             <li>
-              <a routerLinkActive="navActive" routerLink="/user/profile" >Welcome Chadd</a>
+              <a routerLink="/user/login" *ngIf="!auth.isAuthenticated()">Login</a>
+              <a *ngIf="auth.isAuthenticated()" routerLinkActive="navActive"
+                   routerLink="/user/profile"> Welcome {{auth.appUser.firstName}}</a>
               </li>
           </ul>
         </div>
