--- a/src/app/user/profile.component.html
+++ b/src/app/user/profile.component.html
@@ -1,1 +1,31 @@
-<p>profile works!</p>
+<div>
+    <h1>Edit Your Profile </h1>
+    <hr>
+    <div class="col-md-4">
+      <form autocomplete="off" novalidate [formGroup]="profileForm" (ngSubmit)="saveProfile(profileForm.value)" >
+        <div class="form-group">
+          <label for="firstName">First Name:</label>
+         <input id="firstName" 
+                [ngClass]="{'error': profileForm.controls.firstName.invalid 
+                                     && profileForm.controls.firstName.touched }"   
+                type="text" 
+                formControlName="firstName"
+                class="form-control" 
+                placeholder="First Name..." />
+        </div>
+        <div class="form-group">
+          <label for="lastName">Last Name:</label>
+          <input id="lastName" 
+          [ngClass]="{'error': profileForm.controls.lastName.invalid 
+                     && profileForm.controls.lastName.touched }"   
+                type="text"
+                formControlName="lastName"
+                class="form-control"    
+                placeholder="Last Name..." />
+        </div>
+  
+        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
+      </form>
+    </div>
+  </div>
